Scaffold for chart view

--- a/app/views/statuschart.html
+++ b/app/views/statuschart.html
@@ -1,1 +1,17 @@
-<p>This is the statusChart view.</p>
+<div class="row">
+  <div class="col-md-4">
+    <div class="panel panel-primary">
+      <h3 class="panel-heading">Trials by Status</h3>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="panel panel-info">
+      <h3 class="panel-heading">Trials by Condition</h3>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="panel panel-success">
+      <h3 class="panel-heading">Trials</h3>
+    </div>
+  </div>
+</div>
