--- a/app/views/statuschart.html
+++ b/app/views/statuschart.html
@@ -2,6 +2,7 @@
   <div class="col-md-4">
     <div class="panel panel-primary">
       <h3 class="panel-heading">Trials by Status</h3>
+      <div class="highchart"></div>
     </div>
   </div>
   <div class="col-md-4">
