--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -47,3 +47,20 @@ body {
   width: 100%;
   height: 100%;
 }
+
+#searchButton {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  margin-left: 5%
+}
+
+#searchBar {
+  float: left;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 75%;
+}
+
+#result {
+  margin-top: 1%
+}
