--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,9 +1,11 @@
 <div class="jumbotron">
   <h3>Search for Clinical Studies</h3>
   <h4>results from clinicaltrials.gov</h4>
-  <form>
-    <input type="text" ng-model="searchTerm"/><br>
+  <form role="form">
+    <div class="form-group">
+      <input id="searchBar" type="text" ng-model="searchTerm" placeholder="Search for..."/>
+    </div>
   </form>
-  <button ng-click="search()">Search!</button>
-  <p ng-show="searching">Searching for {{searchTerm}}</p>
+    <button id="searchButton" type="button" class="btn btn-default btn-lg" ng-click="search()">Search!</button>
+    <p id='result' ng-show="searching">Searching for {{searchTerm}}</p>
 </div>
