Hides table and headers when table is empty

--- a/app/views/chart.html
+++ b/app/views/chart.html
@@ -8,7 +8,7 @@
 </div>
 <div class="panel panel-success">
   <h3 class="panel-heading">{{selectedStatus}} {{searchTerm}} trials studying {{selectedCategory}}</h3>
-  <table class='table table-striped' id="trialTable">
+  <table class='table table-striped' id="trialTable" ng-show="showTable">
     <thead>
       <tr>
         <th><a href"" ng-click="sort='title[0]'; reverse=!reverse">Title</a></th>
